corrected highlighting bug when incorrect answer selected. added row gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,6 +42,7 @@ h1 {
   grid-template-columns: repeat(4, 225px);
   grid-template-rows: 150px;
   grid-gap: 1rem;
+  grid-row-gap: 5rem;
   margin: 0 auto;
   width: 1020px;
 }
